@@ -1,3 +1,15 @@
+2011-02-22  Sheriff Bot  <webkit.review.bot@gmail.com>
+
+        Unreviewed, rolling out r78691.
+        http://trac.webkit.org/changeset/78691
+        https://bugs.webkit.org/show_bug.cgi?id=54956
+
+        Leopard Debug is successfully building again (Requested by
+        aroben on #webkit).
+
+        * Scripts/webkitpy/common/net/buildbot/buildbot.py:
+        * Scripts/webkitpy/common/net/buildbot/buildbot_unittest.py:
+
 2011-02-22  Ilya Tikhonovsky  <loislo@chromium.org>
 
         Reviewed by Pavel Feldman.
